app/main/default/objects/Jumbo__c/Jumbo__c.object-meta.xml
<CustomObject>
    <description>1</description>
    <fields>
        <fullName>Field1__c</fullName>
        <description>http://w3schools.com/my test.asp?name=stÃ¥le&amp;car=saab</description>
        <label>ÐÐ³Ð¾ÑÑ ÐÐ¾ÑÑÐµÐ²Ð¸Ñ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MergeTest__c</fullName>
        <label>MergeTest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Picklist__c</fullName>
        <label>Picklist</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>One</fullName>
                </value>
                <value>
                    <fullName>Two</fullName>
                </value>
                <value>
                    <fullName>Three</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>TestNew__c</fullName>
        <label>TestNew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Jumbo</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Picklist__c</columns>
        <columns>Field1__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Test1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Test1</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Jumbo Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Jumbo</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>test</fullName>
        <active>true</active>
        <errorConditionFormula>Name = &apos;test&apos;</errorConditionFormula>
        <errorMessage>test not allowed</errorMessage>
    </validationRules>
</CustomObject>