app/main/default/objects/Jumbo__c/fields/Field1__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Field1__c</fullName>
        <description>http://w3schools.com/my test.asp?name=stÃ¥le&amp;car=saab</description>
        <label>ÐÐ³Ð¾ÑÑ ÐÐ¾ÑÑÐµÐ²Ð¸Ñ</label>
        <length>100</length>
        <type>Text</type>
    </fields>
</CustomObject>