app/main/default/objects/Jumbo__c/fields/MergeTest__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>MergeTest__c</fullName>
        <label>MergeTest</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>