app/main/default/objects/Jumbo__c/fields/Picklist2__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>Picklist2__c</fullName>
        <label>Picklist2</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Picklist__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>