app/main/default/objects/Jumbo__c/fields/TestNew__c.field-meta.xml
<CustomObject>
    <fields>
        <fullName>TestNew__c</fullName>
        <label>TestNew</label>
        <length>255</length>
        <type>Text</type>
    </fields>
</CustomObject>