app/main/default/objects/Jumbo__c/validationRules/test.validationRule-meta.xml
<CustomObject>
    <validationRules>
        <fullName>test</fullName>
        <active>true</active>
        <errorConditionFormula>Name = &apos;test&apos;</errorConditionFormula>
        <errorMessage>test not allowed</errorMessage>
    </validationRules>
</CustomObject>