app/main/default/objects/Jumbo__c/listViews/All.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Picklist__c</columns>
        <columns>Field1__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
</CustomObject>