app/main/default/objects/Jumbo__c/listViews/Test1.listView-meta.xml
<CustomObject>
    <listViews>
        <fullName>Test1</fullName>
        <columns>NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Test1</label>
        <language>en_US</language>
    </listViews>
</CustomObject>